--- a/OOPs/class_blueprint.ipynb
+++ b/OOPs/class_blueprint.ipynb
@@ -2,21 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "class abc:\n",
+    "    a=10       #class variable\n",
     "    def __init__(self):\n",
-    "        self.taj_length=400\n",
-    "        self.taj_width=300\n",
-    "        self.taj_tomb=5\n",
-    "        self.taj_base=\"wood\"\n"
+    "        self.taj_length=400   # instance variable\n",
+    "        self.taj_width=300    # instance variable\n",
+    "        self.taj_tomb=5       # instance variable\n",
+    "        self.taj_base=\"wood\"  # instance variable\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +44,7 @@
        "400"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,6 +129,823 @@
    ],
    "source": [
     "Dubai_tajmahal.taj_width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class abc:\n",
+    "    a=10       #class variable\n",
+    "    def __init__(self):       #constructor \n",
+    "        self.taj_length=400   # instance variable\n",
+    "        self.taj_width=300    # instance variable\n",
+    "        self.taj_tomb=5       # instance variable\n",
+    "        self.taj_base=\"wood\"  # instance variable\n",
+    "    def new(self):\n",
+    "        print(\"new method\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=abc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class abc:  #blueprint\n",
+    "    a=10       #class variable\n",
+    "    def __init__(self):       #constructor of class\n",
+    "        print(id(self))\n",
+    "        self.taj_length=400   # instance variable\n",
+    "        self.taj_width=300    # instance variable\n",
+    "        self.taj_tomb=5       # instance variable\n",
+    "        self.taj_base=\"wood\"  # instance variable\n",
+    "    def new(self):\n",
+    "        print(\"new method\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what is self?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2407448622416\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=abc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2407448622416\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new method\n"
+     ]
+    }
+   ],
+   "source": [
+    "abc.new(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class abc:  #blueprint\n",
+    "    a=10       #class variable\n",
+    "    def __init__(self):       #constructor of class\n",
+    "        print(\"new class :\",id(self))\n",
+    "        self.taj_length=400   # instance variable\n",
+    "        self.taj_width=300    # instance variable\n",
+    "        self.taj_tomb=5       # instance variable\n",
+    "        self.taj_base=\"wood\"  # instance variable\n",
+    "    def new(self):\n",
+    "        print(\"new method\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new class : 2407449443920\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=abc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2407449443920\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2407448622416"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.taj_length=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140733530891336\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(a.taj_length))\n",
+    "print(a.taj_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2407447328080\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(b.taj_length))\n",
+    "print(b.taj_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ATM:\n",
+    "    def __init__(self):\n",
+    "        self.pin=1111\n",
+    "        self.balance=1000\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna.pin=9807"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ashish=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ashish.pin=3131"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anurag=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anurag.pin=4261"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9807"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krishna.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4261"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anurag.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3131"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ashish.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna.balance=110000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ashish.balance=3423434"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anurag.balance=4324234"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110000"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krishna.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4324234"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anurag.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3423434"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ashish.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ATM:\n",
+    "    def __init__(self):\n",
+    "        self.pin=1111\n",
+    "        self.balance=1000\n",
+    "    \n",
+    "    def balance_enquiry(self):\n",
+    "        print(\"you account balance is {}\".format(self.balance))\n",
+    "    \n",
+    "    def update_balance(self):\n",
+    "        self.balance=int(input(\"Enter you bank balance:\"))\n",
+    "        print(f\"you balance update successfully: {self.balance}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you account balance is 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "krishna.balance_enquiry()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you balance update successfully: 255555\n"
+     ]
+    }
+   ],
+   "source": [
+    "krishna.update_balance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255555"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krishna.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you account balance is 255555\n"
+     ]
+    }
+   ],
+   "source": [
+    "krishna.balance_enquiry()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ATM:\n",
+    "    def __init__(self):\n",
+    "        self.pin=1111\n",
+    "        self.balance=1000\n",
+    "    \n",
+    "    def balance_enquiry(self):\n",
+    "        print(\"you account balance is {}\".format(self.balance))\n",
+    "    \n",
+    "    def update_balance(self):\n",
+    "        self.balance=int(input(\"Enter you bank balance:\"))\n",
+    "        print(f\"you balance update successfully: {self.balance}\")\n",
+    "    \n",
+    "    def change_pin(self):\n",
+    "        self.pin=input(\"Enter your pin:\")\n",
+    "        print(\"Pin change successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1111"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krishna.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pin change successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "krishna.change_pin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9807'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krishna.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encapsulation: private your data/ hiding data of class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ATM:\n",
+    "    def __init__(self):\n",
+    "        self.pin=1111\n",
+    "        self.balance=1000\n",
+    "    \n",
+    "    def balance_enquiry(self):\n",
+    "        print(\"you account balance is {}\".format(self.balance))\n",
+    "    \n",
+    "    def update_balance(self):\n",
+    "        self.balance=int(input(\"Enter you bank balance:\"))\n",
+    "        print(f\"you balance update successfully: {self.balance}\")\n",
+    "    \n",
+    "    def change_pin(self):\n",
+    "        self.pin=input(\"Enter your pin:\")\n",
+    "        print(\"Pin change successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ashish=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1111"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ashish.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ashish.pin=3131"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3131"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ashish.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ATM:\n",
+    "    def __init__(self):\n",
+    "        self.__pin=1111\n",
+    "        self.balance=1000\n",
+    "    \n",
+    "    def balance_enquiry(self):\n",
+    "        print(\"you account balance is {}\".format(self.balance))\n",
+    "    \n",
+    "    def update_balance(self):\n",
+    "        self.balance=int(input(\"Enter you bank balance:\"))\n",
+    "        print(f\"you balance update successfully: {self.balance}\")\n",
+    "    \n",
+    "    def change_pin(self):\n",
+    "        self.__pin=input(\"Enter your pin:\")\n",
+    "        print(\"Pin change successfully\")\n",
+    "    \n",
+    "    def show_pin(self):\n",
+    "        print(\"show pin:\",self.__pin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna=ATM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ATM' object has no attribute 'pin'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m krishna\u001b[39m.\u001b[39;49mpin\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ATM' object has no attribute 'pin'"
+     ]
+    }
+   ],
+   "source": [
+    "krishna.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "krishna.pin=1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krishna.pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "show pin: 1111\n"
+     ]
+    }
+   ],
+   "source": [
+    "krishna.show_pin()"
    ]
   },
   {
